# vis

./: .appveyor.yml  .clang-format  .codecov.yml  .editorconfig  .gitignore  .gitmodules  .luacheckrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  GNUmakefile  INSTALL.md  LICENSE  Makefile  README  README.md  array.c  array.h  buffer.c  buffer.h  cmake_uninstall.cmake.in  colors.c  config.def.h  config.mk  configure  docker-compose.yml  driver-ti.c  editor.c  editor.h  event-basic.c  indent.c  indent.h  index.html  keydoc.awk  libutf.c  libutf.h  macro.h  main.c  map.c  (+75 more)
.builds/: alpine.yml  debian.yml  freebsd.yml  openbsd.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: coverity-scan.yml  luacheck.yml  luadoc.yml  macos.yml  man.yml  ubuntu.yml  windows.yml  windows.yml.NOACTIVE
core/: .gitignore  Makefile  README.md  array-test.c  array.c  buffer-test.c  buffer.c  ccan-config.c  map.c  tap.h  text-test.c  text.c
doc/: Doxyfile  Makefile  array.rst  buffer.rst  conf.py  index.html  index.rst  ldoc_fixed.css  map.rst  text.rst  view.rst  vis.rst
fuzz/: .gitignore  Makefile  fuzzer.h  text-fuzzer.c
fuzz/dictionaries/: buffer-fuzzer.dict  text-fuzzer.dict  text-libfuzzer.dict
lexers/: LICENSE  README.md  actionscript.lua  ada.lua  ansi_c.lua  antlr.lua  apdl.lua  apl.lua  applescript.lua  asm.lua  asp.lua  awk.lua  bash.lua  batch.lua  bibtex.lua  boo.lua  caml.lua  cmake.lua  coffeescript.lua  container.lua  cpp.lua  crystal.lua  csharp.lua  css.lua  cuda.lua  desktop.lua  diff.lua  django.lua  dmd.lua  dockerfile.lua  dot.lua  eiffel.lua  elixir.lua  erlang.lua  faust.lua  fish.lua  forth.lua  fortran.lua  fsharp.lua  fstab.lua  (+76 more)
lexers/themes/: dark-16.lua  default-16.lua  default-256.lua  light-16.lua  seti.lua  solarized-16.lua  solarized.lua
lua/: Makefile  README.md  append.lua  append.ref  basic_command_register.lua  basic_command_register.ref  basic_cursor.lua  basic_cursor.ref  basic_empty_file.lua  basic_file.lua  basic_map.lua  basic_map.ref  cursor.lua  delete.in  delete.lua  delete.ref  file-empty.lua  getline.lua  lexer.lua  lines.lua  makefile  map-basic.lua  setline.in  setline.lua  setline.ref  test.sh  utils.lua  vis-std.lua  vis.lua  visrc.lua
lua/doc/: README.md  config.ld
lua/lexers/: LICENSE  README.md  actionscript.lua  ada.lua  ansi_c.lua  antlr.lua  apdl.lua  apl.lua  applescript.lua  arduino.lua  asm.lua  asp.lua  autohotkey.lua  autoit.lua  awk.lua  bash.lua  batch.lua  bibtex.lua  boo.lua  c.lua  caml.lua  chuck.lua  clojure.lua  cmake.lua  coffeescript.lua  container.lua  context.lua  cpp.lua  crystal.lua  csharp.lua  css.lua  cuda.lua  d.lua  dart.lua  desktop.lua  diff.lua  django.lua  dmd.lua  dockerfile.lua  dot.lua  (+132 more)
lua/plugins/: complete-filename.lua  complete-word.lua  digraph.lua  filetype.lua  number-inc-dec.lua  open-file-under-cursor.lua  textobject-lexer.lua
lua/themes/: base-16.lua  curses.lua  dark-16.lua  dark.lua  default-256.lua  default.lua  light-16.lua  light.lua  scite.lua  seti.lua  solarized.lua  zenburn.lua
luadoc/: config.ld
man/: index.html  vis-clipboard.1  vis-clipboard.1.html  vis-complete.1  vis-complete.1.html  vis-digraph.1  vis-digraph.1.html  vis-highlight.1  vis-menu.1  vis-menu.1.html  vis-open.1  vis-open.1.html  vis.1  vis.1.html
misc/: terminal-color-degeneration.html
sam/: Makefile  README.md  test.sh  visrc.lua
sam/addresses/: columns.cmd  columns.in  first-last.cmd  second.in
sam/commands/: filter-capitalize.cmd  group.cmd  long-text.cmd  loop-empty-match2.cmd  loop-empty-match3.cmd  loop-empty-match3.in  loop-lines1.cmd  loop-lines2.cmd  loop-lines4.cmd  loop-lines5.cmd  loop-lines6.cmd  loop-lines7.cmd  loop-lines7.in  loop-lines8.cmd  loop-lines9.cmd  pipe-in.cmd  pipe-out.cmd
sam/errors/: conflict.cmd  filter.cmd  pipe-in.cmd  read.in  unbalanced-group.cmd
sam/examples/: comment-functions.in  delete-empty-lines.cmd  swap-words.in
termkey/: driver-csi.c  driver-ti.c  termkey.h
test/: LICENSE  Makefile  README.md
test/core/: .gitignore  CMakeLists.txt  Makefile  array-test.c  array.c  buffer-test.c  buffer.c  ccan-config.c  map-test.c  map.c  tap.h  text-test.c  text.c
test/core/ccan/compiler/: _info
test/core/ccan/compiler/test/: compile_fail-printf.c  run-is_compile_constant.c
test/core/ccan/tap/: _info  tap.3  tap.c  tap.h
test/core/ccan/tap/test/: run.c
test/fuzz/: .gitignore  CMakeLists.txt  Makefile  README.md  buffer-fuzzer.c
test/lua/: CMakeLists.txt  README.md  cursor.lua  file-empty.lua  file-positions.in  file-positions.lua  lines.in  lines.lua  map-basic.lua  number-inc.in  number-inc.lua  option-register.lua  pipe.lua  test.sh  visrc.lua
test/sam/: CMakeLists.txt  test.sh
test/text/: .gitignore  ccan-config.c
test/util/: CMakeLists.txt  Makefile  README.md  keys.c
test/vim/: CMakeLists.txt  README.md  test.sh
test/vis/: .gitignore  CMakeLists.txt  Makefile  README.md  test.sh
util/: README.md  keys.c  test
vim/: test.sh
vim/motions/: goto.keys  line.in  line.keys
vim/prompt/: history.keys
vim/registers/: black-hole.in  black-hole.keys  command.in  command.keys  named.keys  search.in  search.keys
vim/special-files/: combining.in  combining.keys  mmap.keys  search-binary.in
vim/text-objects/: words-symbols.in  words-symbols.keys
vis/: test.sh  visrc.lua
vis/errors/: filter.in  filter.keys  pipe-in.keys
vis/insert-mode/: autoindent.in  autoindent.ref  verbatim.in  verbatim.keys  verbatim.ref
vis/interop/: pre-save-grows.lua  pre-save-grows.ref  pre-save-shrinks.in  pre-save-shrinks.ref
vis/mappings/: insert-mode.keys  insert-mode.ref
vis/motions/: find.in  find.keys  find.ref  line-begin.ref  line-char-first.in  line-char-first.keys  line-char-first.ref  line-char-last.in  line-char-last.keys  line-end.in  line-end.keys  line-end.ref  line.in  line.keys  line.ref  next-end-of-bigword.in  next-end-of-bigword.keys  next-end-of-bigword.ref  next-end-of-word.in  next-end-of-word.keys  next-end-of-word.ref  next-start-of-bigword.in  next-start-of-bigword.keys  (+27 more)
(+294 files in other folders)
